@startuml

title __NETWORK's Class Diagram__\n

  package Network {
    class NetworkController {
        {static} + sendWorldData()
        {static} + sendData()
        {static} + sendDirectionData()
    }
  }
  

  package Network {
    class NetworkReciever {
        - receiveSocket : DatagramSocket
        - recieveData : byte[]
        - recievePort : int
        + NetworkReciever()
        + recieveData()
        + run()
    }
  }
  

  NetworkReciever -up-|> Runnable
  NetworkReciever -up-|> Observable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
